--- a/style.css
+++ b/style.css
@@ -126,4 +126,11 @@
                 background-size: 2958px;
                 
             }
+.back1{
+    background-image: url('bg.JPEG');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-attachment: fixed;
+      background-size: cover;
+}
       
